// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`min number should not return an error (equal) 1`] = `undefined`;

exports[`min number should not return an error 1`] = `undefined`;

exports[`min number should return a custom message 1`] = `
Object {
  "error": Object {
    "error": "too small",
    "path": "value",
  },
}
`;

exports[`min number should return an error 1`] = `
Object {
  "error": Object {
    "error": "must be larger than or equal to 10",
    "path": "value",
  },
}
`;

exports[`min string should not return an error (equal) 1`] = `undefined`;

exports[`min string should not return an error 1`] = `undefined`;

exports[`min string should return a custom message 1`] = `
Object {
  "error": Object {
    "error": "too short",
    "path": "value",
  },
}
`;

exports[`min string should return an error 1`] = `
Object {
  "error": Object {
    "error": "length must be at least 10 characters long",
    "path": "value",
  },
}
`;
